syntax = "proto3";
package identities.transactions.mutate;

import "x/ids/base/identityID.proto";
import "x/lists/base/propertyList.proto";

message Message {
  string from = 1;
  ids.IdentityID from_i_d = 2;
  ids.IdentityID identity_i_d = 3;
  lists.PropertyList mutable_meta_properties = 4;
  lists.PropertyList mutable_properties = 5;
}